# effect-probe

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.agents/skills/run-effectprobe-pr/: SKILL.md
.agents/skills/run-effectprobe-pr/agents/: openai.yaml
.agents/skills/run-effectprobe-pr/references/: review-contract.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
docs/: claim-boundaries.md  limitations.md  threat-model.md  tutorial.md
docs/adr/: 0001-alpha-scope-and-claim-boundaries.md  README.md
scripts/: verify.sh
src/effectprobe/: __init__.py  _cli.py  _evidence_artifact.py  _file_refund_comparison.py  _lost_result.py  _mcp_evidence_replay.py  _mcp_refund_comparison.py  _mcp_refund_server.py  _mcp_refund_store.py  _mcp_reports.py  _mcp_stdio.py  _refund_comparison.py  _semantic_kernel.py
tests/: test_cli.py  test_duplicate_refund.py  test_evidence_artifact.py  test_file_refund_comparison.py  test_mcp_evidence_replay.py  test_mcp_refund_comparison.py  test_mcp_reports.py  test_mcp_stdio.py  test_package.py  test_refund_comparison.py  test_semantic_kernel.py  test_semantic_properties.py
