[project]
name = "effectprobe"
version = "0.0.0"
description = "Deterministic external-effect testing for retryable tools and durable agents."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
  "agents",
  "fault-injection",
  "idempotency",
  "mcp",
  "reliability",
  "testing",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
    "anyio>=4.5,<5",
    "mcp>=1.28.1,<2",
]

[project.scripts]
effectprobe = "effectprobe._cli:main"

[project.urls]
Documentation = "https://github.com/dosonc/effect-probe#readme"
Issues = "https://github.com/dosonc/effect-probe/issues"
Repository = "https://github.com/dosonc/effect-probe"

[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "commitizen>=4.16.4,<5",
  "hypothesis>=6.156.6,<7",
  "pre-commit>=4.6.0,<5",
  "pyright>=1.1.411,<2",
  "pytest>=9.1.1,<10",
  "pytest-cov>=7.1.0,<8",
  "ruff>=0.15.21,<1",
]

[tool.uv]
required-version = ">=0.11.26,<0.12"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=effectprobe",
  "--cov-branch",
  "--cov-report=term-missing",
  "--cov-fail-under=90",
]
filterwarnings = ["error"]
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["effectprobe"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "RUF", "SIM", "UP"]
